# zebec-wormhole-program

./: .gitignore  LICENSE  README.md  deploy.sh
evm-project/: .gitignore  eth-address.txt  hardhat.config.ts  package-lock.json  package.json  vaa.txt
evm-project/contracts/: Encoder.sol  Messages.sol  Messenger.sol
evm-project/contracts/interfaces/: IWETH.sol  IWormhole.sol  Structs.sol
evm-project/scripts/: deploy.ts  get_current_msg.ts  register_solana_address.ts  send_msg.ts
solana-project/: .gitignore  Anchor.toml  mint.txt  package-lock.json  package.json  post_audit.json  solana_project-keypair.json  vaa.txt
solana-project/programs/solana-project/: Cargo.toml
solana-project/programs/solana-project/src/: constants.rs  context.rs  errors.rs  events.rs  lib.rs  payload.rs  portal.rs  state.rs  wormhole.rs
solana-project/scripts/: deposit_token.ts  direct_transfer_token.ts  initialize_messenger.ts  initialize_zebec.ts  perform_test.ts  receiver_withdraw.ts  register_eth_chain.ts  stream_token.ts
solana-project/tests/: Constants.ts  solana-project.ts  utils.ts
